<resources>
    <string name="app_name">MyListApp</string>
    <string name="txt_titulo">Cadastro de Pessoa</string>
    <string name="txt_hint_edit_email">e-mail</string>
    <string name="txt_hint_edit_telefone_contato">Telefone Contato</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>